2003-08-28  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: reverted tables to those in cvs 1.64

2003-08-28  Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/_startup.c: quick & dirty fix for ds390/ds400;
	these ports have their own __sdcc_external_start()

2003-08-26  Bernhard Held <bernhard@bernhardheld.de>

	pic patch provided by Slade Rich <slade_rich@yahoo.com>
	* src/pic/glue.c (pic14printPublics): fixed bug introduced when symbol
	type for bits was changed. It resulted in bit variables becoming
	global, which is not permitted in PIC 14 assembly output.

2003-08-23  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: various additions and updates. Rearranged sections

2003-08-22  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	Z80 and MCS51 linkers complaint if a public symbol is defined
	in more than one library module:

	* as/mcs51/lklib.c
	* link/z80/lklib.c
	* as/mcs51/Makefile.in

2003-08-22  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	A few small changes that speed up the peephole optimizer.

	* src/SDCCpeeph.c

2003-08-22  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Try to make the peephole optimizer smarter by maintaining
	an association between the assembly source code and the
	iCodes that originated them. Put this information to use
	with a new peephole rule condition "notVolatile" so that
	the rules can be aggressive yet still safe.

	* src/SDCCpeeph.c
	* src/SDCCpeeph.h
	* src/mcs51/gen.c
	* src/mcs51/peeph.def

2003-08-20  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed bug #741761

	* src/mcs51/gen.c (aopForSym, leftRightUseAcc),
	* src/ds390/gen.c (aopForSym, leftRightUseAcc): preserve A and B
	if the left or right operand symbols have the accuse flag set.

2003-08-20  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Changed the type of the result of the ! (NOT) operator to char;
	previously it returned the same type as the source. This allows